--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/nuje2873/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/nuje2873/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/xbcmtcx/k513o" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/xbcmtcx/q11l" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/xbcmtcx/e12t" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/xbcmtcx/y8a" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/xbcmtcx/p4j" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/xbcmtcx/w12l" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/xbcmtcx/d3g" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/xbcmtcx/u10z" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/xbcmtcx/v9q" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/xbcmtcx/y7x" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/xbcmtcx/v5g" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/nuje2873/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/nuje2873/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/gypaefbtt/n513f" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/gypaefbtt/r11o" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/gypaefbtt/b12v" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/gypaefbtt/c8u" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/gypaefbtt/j4d" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/gypaefbtt/p12o" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/gypaefbtt/h3j" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/gypaefbtt/m10g" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/gypaefbtt/f9k" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/gypaefbtt/k7i" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/gypaefbtt/d5l" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
 <tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215877.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/06/page-2-320x200.jpg"><p align="center">宜昌发生严重内涝 发暴雨红色预警</p></a>
 <a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215877.md#1" title="宜昌发生严重内涝 发暴雨红色预警""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/page-2-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12216208.md#1" title="美限制中共官员及家属签证 哪些人或受制裁""><img width="73" src="https://i.epochtimes.com/assets/uploads/2004/09/4090345411164-320x200.jpg">&nbsp;</a>
@@ -13,12 +13,12 @@
 <a href="https://github.com/nuje2873/djy/blob/master/gb/20/5/24/n12133812.md#1" title="北京教师：小时候知道的很多事都是假的""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/20200501_shouhui_GettyImages-1202063240-crop-700x420_ccp_01-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12214603.md#1" title="海外华人：回不了家 击穿我们心理底线""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/e8883cf50d60fd986b377ffa8fb54968-320x200.png">&nbsp;</a>
 <p align="center"><a href="https://github.com/nuje2873/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://nuje2873.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>22分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215877.md#1">宜昌发生严重内涝 发暴雨红色预警</a><br>
-:clock8: <em>56分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12216208.md#1">美限制中共官员及家属签证 哪些人或受制裁</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12216185.md#1">第二张救济支票还是返工奖金？你需要了解啥</a><br>
+:clock8: <em>35分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215877.md#1">宜昌发生严重内涝 发暴雨红色预警</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12216208.md#1">美限制中共官员及家属签证 哪些人或受制裁</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12216185.md#1">第二张救济支票还是返工奖金？你需要了解啥</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12216177.md#1">北京回龙观现疫情 全家隔离 风险地区增至44个</a><br>
 :clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12216075.md#1">周末不去新泽西 川普：留在首都确保执法</a><br>
-:clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12216063.md#1">四川冕宁县特大暴雨 致3人死亡12人失联</a><br>
+:clock8: <em>5小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12216063.md#1">四川冕宁县特大暴雨 致3人死亡12人失联</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12215064.md#1">大陆洪灾 台商被令限期捐钱 不堪重负回台</a><br>
 <a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12214374.md#1">30万燕郊人像蝼蚁爬向北京 文章被删</a><br>
