--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/nuje2873/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/nuje2873/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/lwzndlckc/x513i" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/lwzndlckc/a11o" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/lwzndlckc/i12j" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/lwzndlckc/k8p" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/lwzndlckc/h4d" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/lwzndlckc/d12u" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/lwzndlckc/d3v" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/lwzndlckc/f10t" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/lwzndlckc/q9j" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/lwzndlckc/w7f" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/lwzndlckc/i5h" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/nuje2873/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/nuje2873/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/xuboy/h513y" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/xuboy/a11r" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/xuboy/j12k" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/xuboy/j8s" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/xuboy/c4w" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/xuboy/t12u" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/xuboy/u3o" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/xuboy/j10t" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/xuboy/q9i" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/xuboy/m7w" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/xuboy/r5v" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
 <tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215877.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/06/page-2-320x200.jpg"><p align="center">中国多地降暴雨  宜昌内涝水淹全城</p></a>
 <a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215877.md#1" title="中国多地降暴雨  宜昌内涝水淹全城""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/page-2-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12216208.md#1" title="美限制中共官员及家属签证 哪些人或受制裁""><img width="73" src="https://i.epochtimes.com/assets/uploads/2004/09/4090345411164-320x200.jpg">&nbsp;</a>
@@ -13,18 +13,19 @@
 <a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215313.md#1" title="【一线采访】疫情冲击重挫北京经济""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/GettyImages-1221999174-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12215195.md#1" title="窃美公司商业机密 中国教授被判经济间谍罪""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/08/GettyImages-803354590-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/nuje2873/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://nuje2873.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>33分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215402.md#1">“端点星”陈玫家属拒绝第二批官派律师</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12216313.md#1">中共官员破坏港自治 美议员欢迎白宫限制签证</a><br>
+:clock8: <em>14分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215402.md#1">“端点星”陈玫家属拒绝第二批官派律师</a><br>
+:clock8: <em>60分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12216313.md#1">中共官员破坏港自治 美议员欢迎白宫限制签证</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12216321.md#1">许章润再发声 斥中共垄断思想 强拆艺术区</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12216263.md#1">宜昌水深半人高 网民疑三峡大坝葛洲坝泄洪</a><br>
 :clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215877.md#1">中国多地降暴雨  宜昌内涝水淹全城</a><br>
-:clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12216208.md#1">美限制中共官员及家属签证 哪些人或受制裁</a><br>
+:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12216208.md#1">美限制中共官员及家属签证 哪些人或受制裁</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12215064.md#1">大陆洪灾 台商被令限期捐钱 不堪重负回台</a><br>
 <a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12214374.md#1">30万燕郊人像蝼蚁爬向北京 文章被删</a><br>
 <a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12213170.md#1">【翻墙必看】美参院全票通过《香港自治法》</a><br>
 <a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/25/n12212800.md#1">杨威：习近平是否希望川普连任</a><br>
 <a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12214073.md#1">【现场视频】“老天怒了” 内蒙现巨型龙卷风</a><br>
+<a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/25/n12212439.md#1">蓬佩奥：中共安全部队人员在华为大楼工作</a><br>
 <br><p align="center"><a href="https://github.com/nuje2873/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12214112.md#1">对抗华为 白宫考虑联邦干预 确保5G未来</a><br>
 <a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12212964.md#1">【内幕】王岐山汪洋与美方交手 铩羽而归</a><br>
